migrated and tested on camunda 8.8 with operate ui
